--- a/Proyecto0.1/Dashboard1/App.xaml
+++ b/Proyecto0.1/Dashboard1/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Dashboard1"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginAdmin.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
