--- a/Proyecto0.1/Dashboard1/Huella.xaml
+++ b/Proyecto0.1/Dashboard1/Huella.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Dashboard1.Window1"
+﻿<Window x:Class="Dashboard1.Huella"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
