--- a/Proyecto0.1/Dashboard1/LoginAdmin.xaml
+++ b/Proyecto0.1/Dashboard1/LoginAdmin.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Dashboard1.Window1"
+﻿<Window x:Class="Dashboard1.LoginAdmin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,8 +10,8 @@
         <StackPanel HorizontalAlignment="Left" Height="393" Margin="208,42,0,0" VerticalAlignment="Top" Width="382" Background="White">
             <Image x:Name="image" Source="Resources/user.png" Height="133" VerticalAlignment="Top" Width="163" Margin="109,20,109,0"/>
             <TextBox x:Name="user" Height="33" TextWrapping="Wrap" Text="Ingrese documento de identidad" Width="250" Margin="0,20,0,0"/>
-            <TextBox x:Name="Password" Height="33" TextWrapping="Wrap" Text="Ingrese contraseña" Width="250" Margin="0,20,0,0"/>
-            <Button x:Name="button" Content="Button" d:LayoutOverrides="Height" Width="200" Margin="0,30,0,0 "/>
+            <PasswordBox x:Name="pass" Height="33"  Width="250" Margin="66,20,66,0"/>
+            <Button x:Name="button" Content="Iniciar sesión" d:LayoutOverrides="Height" Width="200" Margin="0,30,0,0 " Click="button_Click"/>
         </StackPanel>
 
     </Grid>
