--- a/Proyecto0.1/Dashboard1/Huella.xaml
+++ b/Proyecto0.1/Dashboard1/Huella.xaml
@@ -2,16 +2,28 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dashboard1"
         mc:Ignorable="d"
-        Title="ADMIN ACCESS" Height="450" Width="800">
-    <Grid Background="#FF00A2FF" Margin="0,0,0,-101">
-        <StackPanel HorizontalAlignment="Left" Height="450" Margin="208,42,0,0" VerticalAlignment="Top" Width="382" Background="White">
-            <Image x:Name="image" Source="Resources/fixed.png" Height="99" VerticalAlignment="Top" Margin="110,80,110,0"/>
-            <TextBox x:Name="user" Height="33" TextWrapping="Wrap" Text="O Ingrese documento de identidad" Width="250" Margin="0,20,0,0"/>
-            <Button x:Name="button" Content="Registrar" d:LayoutOverrides="Height" Width="200" Margin="0,30,0,0 "/>
+        Title="ADMIN ACCESS" Height="514.353" Width="800" Loaded="Window_Loaded">
+    <Grid Background="#FF00A2FF" Margin="0,0,0,-6" Name="grid1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="13*"/>
+            <ColumnDefinition Width="130*"/>
+            <ColumnDefinition Width="649*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel HorizontalAlignment="Left" Height="405" Margin="65,42,0,0" VerticalAlignment="Top" Width="382" Background="White" Grid.Column="2">
+            <Image x:Name="pbImages" Source="Resources/fixed.png" Height="99" VerticalAlignment="Top" Margin="110,80,110,0"/>
+            <TextBox x:Name="tbInfo" Height="33" TextWrapping="Wrap" Text="O Ingrese documento de identidad" Width="250" Margin="0,20,0,0" GotFocus="User_GotFocus"/>
+            <TextBox x:Name="textBox1" Height="25" TextWrapping="Wrap" Text="Ingrese nombre" Margin="66,0"/>
+            <Button x:Name="button2" Content="Capturar huella" Width="200" Margin="91,30,91,0"/>
+            <Button x:Name="button1" Content="Guardar" Margin="91,0" Click="Button1_Click"/>
+            <WindowsFormsHost>
+                <wf:PictureBox x:Name="pbImage"/>
+            </WindowsFormsHost>
         </StackPanel>
+        <RadioButton x:Name="radioButton" Content="RadioButton" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
