--- a/Cuadros de diálogo WPF/Cuadros de diálogo WPF/App.xaml
+++ b/Cuadros de diálogo WPF/Cuadros de diálogo WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Cuadros_de_diálogo_WPF"
-             StartupUri="llamac.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
