--- a/Proyecto0.1/Dashboard1/MainWindow.xaml
+++ b/Proyecto0.1/Dashboard1/MainWindow.xaml
@@ -127,7 +127,7 @@
                 <Button Margin="0,10,0,0" Background="{x:Null}" BorderBrush="{x:Null}" Click="Button_Click_1">
                     <Grid Width="150">
                         <materialDesign:PackIcon Kind="Account" VerticalAlignment="Center" Foreground="White"/>
-                        <TextBlock HorizontalAlignment="Center" Text="USUARIOS" FontFamily="Champagne &amp; Limousines" Margin="42,0,-48,-1" Width="156" Foreground="White"/>
+                        <TextBlock HorizontalAlignment="Right" Text="USUARIOS" FontFamily="Champagne &amp; Limousines" Margin="0,0,-48,-1" Width="156" Foreground="White"/>
                     </Grid>
                 </Button>
                 <Button Margin="0,10,0,0" Background="{x:Null}" BorderBrush="{x:Null}">
