--- a/Proyecto0.1/Dashboard1/Ingreso.xaml
+++ b/Proyecto0.1/Dashboard1/Ingreso.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="Ingreso" Height="300" Width="300">
     <Grid>
-        
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="84,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="103,201,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="43,18,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
