--- a/Proyecto0.1/Dashboard1/Foto.xaml
+++ b/Proyecto0.1/Dashboard1/Foto.xaml
@@ -1,59 +1,19 @@
 ﻿<Window x:Class="Dashboard1.Foto"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="WPF C# WebCam" Height="400" Width="929.201" Loaded="mainWindow_Loaded">
-    <!-- Design by Pongsakorn Poosankam -->
-    <Window.Background>
-        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="#FFD7F4E8" Offset="0.916"/>
-            <GradientStop Color="#FF6CB595" Offset="0.145"/>
-        </LinearGradientBrush>
-    </Window.Background>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.11*"/>
-            <RowDefinition Height="0.442*"/>
-            <RowDefinition Height="0.067*"/>
-            <RowDefinition Height="0.088*"/>
-            <RowDefinition Height="0.293*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.068*"/>
-            <ColumnDefinition Width="0.274*"/>
-            <ColumnDefinition Width="0.069*"/>
-            <ColumnDefinition Width="0.274*"/>
-            <ColumnDefinition Width="0.315*"/>
-        </Grid.ColumnDefinitions>
-        <Border  Grid.Column="1" Grid.Row="1" BorderThickness="3" CornerRadius="3">
-            <Border.BorderBrush>
-                <RadialGradientBrush>
-                    <GradientStop Color="Black" Offset="0.047"/>
-                    <GradientStop Color="#FF00907A" Offset="1"/>
-                </RadialGradientBrush>
-            </Border.BorderBrush>
-            <Image x:Name="imgVideo" Stretch="Fill"   />
-        </Border>
-        <Border  Grid.Column="3" Grid.Row="1" BorderThickness="3" CornerRadius="3">
-            <Border.BorderBrush>
-                <RadialGradientBrush>
-                    <GradientStop Color="Black" Offset="0.047"/>
-                    <GradientStop Color="#FF00907A" Offset="1"/>
-                </RadialGradientBrush>
-            </Border.BorderBrush>
-            <Image x:Name="imgCapture" Stretch="Fill"/>
-        </Border>
-        <StackPanel Grid.Column="3" Grid.Row="3" Orientation="Horizontal">
-            <Button x:Name="bntCapture" Content="Capturar" Click="bntCapture_Click" Width="121" />
-            <Button x:Name="bntSaveImage" Content="Guardar" Margin="8,0,0,0" Click="bntSaveImage_Click" Width="124" />
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:wpf="clr-namespace:WebEye.Controls.Wpf;assembly=WebEye.Controls.Wpf.WebCameraControl"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:Dashboard1"
+        mc:Ignorable="d"
+        Title="Foto" Height="450" Width="800">
+    <DockPanel>
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center">
+            <ComboBox x:Name="comboBox" Width="115.333" DisplayMemberPath="Name" SelectionChanged="OnSelectionChanged" />
+            <Button x:Name="startButton" Content="Start" Width="75" Margin="4,0,0,0" IsEnabled="False" Click="OnStartButtonClick" />
+            <Button x:Name="stopButton" Content="Stop" Width="75" Margin="4,0,0,0" IsEnabled="{Binding Path=IsCapturing, ElementName=webCameraControl}" Click="OnStopButtonClick" />
+            <Button x:Name="imageButton" Content="Image..." Width="75" Margin="4,0,0,0" IsEnabled="{Binding Path=IsCapturing, ElementName=webCameraControl}" Click="OnImageButtonClick" Background="#FF008DFD" />
         </StackPanel>
-        <StackPanel Grid.Column="4" Grid.Row="1" VerticalAlignment="Center">
-            <Button x:Name="bntResolution" Content="Video Format" Width="120" Click="bntResolution_Click" />
-            <Button x:Name="bntSetting" Content="Video Source" Width="120" Margin="0,10,0,0" Click="bntSetting_Click" />
-        </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button x:Name="bntStart" Content="Iniciar" Click="bntStart_Click" />
-            <Button x:Name="bntStop" Content="Detener" Margin="10,0,0,0" Click="bntStop_Click" />
-            <Button x:Name="bntContinue" Content="Continuar" Margin="10,0,0,0" Click="bntContinue_Click" Width="97" />
-        </StackPanel>
-    </Grid>
+        <wpf:WebCameraControl x:Name="webCameraControl" />
+    </DockPanel>
 </Window>
